2008-09-27  TOKI Yoshinori  <toki@freedom.ne.jp>

	* lib/gluon/web/token.rb: independent session.

	* lib/gluon/po.rb: optional advices for presentation commands.

2008-09-22  TOKI Yoshinori  <toki@freedom.ne.jp>

	* lib/gluon/po.rb: check reserved HTML element attributes.

2008-09-15  TOKI Yoshinori  <toki@freedom.ne.jp>

	* lib/gluon/erbview.rb, lib/gluon/renderer.rb: changed view API.

	* lib/gluon/controller.rb: gluon controller syntax changed.

2008-09-14  TOKI Yoshinori  <toki@freedom.ne.jp>

	* lib/gluon/action.rb, lib/gluon/controller.rb: explicit
	controller methods.

	* lib/gluon/erbview.rb, lib/gluon/renderer.rb: new framework for
	view.

2008-08-30  TOKI Yoshinori  <toki@freedom.ne.jp>

	* lib/gluon/validation.rb: declarative validation for HTML form
	values.

2008-08-28  TOKI Yoshinori  <toki@freedom.ne.jp>

	* lib/gluon/action.rb: page_import is new hook for imported
	controller. timing to set request-parameters is
	changed. validation flag status is unchecked at default.

2008-08-26  TOKI Yoshinori  <toki@freedom.ne.jp>

	* lib/gluon/action.rb: page_hook -> page_around_hook.
	page_method should be explicitly defined.

2008-08-24  TOKI Yoshinori  <toki@freedom.ne.jp>

	* lib/gluon/action.rb: validation check flag. timing to set
	request-parameters is changed.

2008-08-19  TOKI Yoshinori  <toki@freedom.ne.jp>

	* lib/gluon/version.rb: version 0.0.2.

	* lib/gluon/controller.rb: gluon controller syntax.

2008-08-18  TOKI Yoshinori  <toki@freedom.ne.jp>

	* lib/gluon/rs.rb: class2path with script_name.

2008-08-15  TOKI Yoshinori  <toki@freedom.ne.jp>

	* lib/gluon/action.rb: page method.

2008-08-08  TOKI Yoshinori  <toki@freedom.ne.jp>

	* lib/gluon/dispatcher.rb: obsolete.

2008-08-05  TOKI Yoshinori  <toki@freedom.ne.jp>

	* lib/gluon.rb: URL map is new dispather.

2008-06-09  TOKI Yoshinori  <toki@freedom.ne.jp>

	* lib/gluon/application.rb: switch to a controller object.

2008-05-24  TOKI Yoshinori  <toki@freedom.ne.jp>
